# prf-android

./: README.md
prf/app/: build.gradle
prf/app/src/main/: AndroidManifest.xml
prf/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  VulkanMain.cpp  VulkanMain.hpp  log.h
prf/app/src/main/cpp/engine2d/: BufferManager.cpp  BufferManager.h  buffer.h  image_layout.h  pipeline.h  utils.h  vertex_buffer.h
prf/app/src/main/cpp/vulkan/: command_buffers.h  command_pool.h  device.h  frame_buffers.h  instance.h  physical_device.h  pipeline_cache.h  queue.h  queue_family_index.h  render_pass.h  surface.h  swapchain.h  sync_objects.h  utils.h
prf/app/src/main/res/values/: strings.xml
prf/app/src/main/shaders/: tri.frag  tri.vert
prf/gradle/wrapper/: gradle-wrapper.properties
tutorial01_load_vulkan/: README.md  build.gradle  gradle.properties  settings.gradle
tutorial01_load_vulkan/app/: build.gradle
tutorial01_load_vulkan/app/src/main/: AndroidManifest.xml
tutorial01_load_vulkan/app/src/main/cpp/: CMakeLists.txt  main.cpp
tutorial01_load_vulkan/app/src/main/res/values/: strings.xml
tutorial01_load_vulkan/gradle/wrapper/: gradle-wrapper.properties
tutorial02_prebuild_layers/: README.md  gradle.properties
tutorial02_prebuild_layers/app/: build.gradle  download_vvl.gradle
tutorial02_prebuild_layers/app/src/main/: AndroidManifest.xml
tutorial02_prebuild_layers/app/src/main/cpp/: CMakeLists.txt  main.cpp
tutorial02_prebuild_layers/app/src/main/res/values/: themes.xml
tutorial02_prebuild_layers/gradle/wrapper/: gradle-wrapper.properties
tutorial03_traceable_layers/: README.md
tutorial03_traceable_layers/app/: build.gradle
tutorial03_traceable_layers/app/src/main/: AndroidManifest.xml
tutorial03_traceable_layers/app/src/main/cpp/: CMakeLists.txt  main.cpp
tutorial03_traceable_layers/layerlib/: build.gradle
tutorial04_first_window/app/: build.gradle
tutorial04_first_window/app/src/main/: AndroidManifest.xml
tutorial04_first_window/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  VulkanMain.cpp  VulkanMain.hpp
tutorial04_first_window/app/src/main/jni/: VulkanMain.cpp
tutorial05_triangle/: gradle.properties
tutorial05_triangle/app/: build.gradle
tutorial05_triangle/app/src/main/: AndroidManifest.xml
tutorial05_triangle/app/src/main/jni/: VulkanMain.cpp
tutorial06_texture/: .gitignore  README.md  build.gradle  settings.gradle
tutorial06_texture/app/: build.gradle
tutorial06_texture/app/src/main/: AndroidManifest.xml
tutorial06_texture/app/src/main/cpp/: CMakeLists.txt
(+9 files in other folders)
